bia-tf/aws_instance.tf
resource "aws_instance" "example" {
    ami           = "ami-02f3f602d23f1659d"
    instance_type = "t3.micro"
    tags = {
        Name = var.instance_name
        ambiente = "dev"
    }
    vpc_security_group_ids = [aws_security_group.bia-dev.id]
    root_block_device {
      volume_size = 12
    }
    iam_instance_profile = aws_iam_instance_profile.role_acesso_ssm.name
    user_data = "${file("userdata_biadev.sh")}"
}
